# spin-incr-dom

./: README.md  example.sh  spin
.github/workflows/: ci.yml
example/: .gitignore  CONTRIBUTING.md  README.md  demo.opam  dune  dune-project
example/.github/workflows/: ci.yml
example/asset/: index.html
example/lib/: app.ml  demo.mli  dune  route.ml  route.mli  router.ml
example/lib/components/: greet.ml
example/lib/pages/: page_home.ml  page_not_found.ml
example/test/: dune  page_home_test.ml
template/: .gitignore  dune  dune-project  esy.json  package.json  tailwind.config.js  {{ project_slug }}.opam
template/github/workflows/: ci.yml
template/lib/: app.ml  router.ml  {{ project_snake }}.mli
template/lib/components/: greet.ml
